--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ purbeurre/__pycache__/settings.cpython-39.pyc
 purbeurre/__pycache__/urls.cpython-39.pyc
 *.pyc
 *.pyc
+*.iml
+*.pyc
+purbeurre/__pycache__/urls.cpython-39.pyc
